Travel::Status::DE::IRIS 2.03 - Fri Feb 07 2026

    * Add missing geocoordinates for two stations
    * Update meta database

Travel::Status::DE::IRIS 2.02 - Fri Feb 06 2026

    * Update station database

Travel::Status::DE::IRIS 2.01 - Sat Dec 20 2025

    * Update DB InfraGO delay / QoS codes

Travel::Status::DE::IRIS 2.00 - Fri Sep 19 2025

    * Update station database
    * db-iris and Travel::Status::DE::IRIS are still deprecated, but as the
      backend service is still available, we might as well make the most of it
    * The major release is mandated by Perl's standard versioning scheme.
      There are no backwards-incompatible changes.

Travel::Status::DE::IRIS 1.99 - Sat Jul 05 2025

    * Deprecation notice: Mention Travel::Status::DE::DBRIS as recommended
      successor. Travel::Status::DE::HAFAS is no longer a viable alternative.
    * db-iris: Do not fail if Cache::File is unavailable
    * Add delay code 27 (Technische Störung am Bus)

Travel::Status::DE::IRIS 1.98 - Thu Jul 04 2024

    * Update stations list

Travel::Status::DE::IRIS 1.97 - Mon May 27 2024

    * Update stations list
    * Add deprecation notice. The backend service that this module relies on
      is deprecated and scheduled for decommissioning. There is no successor.
      Do not use this module for new projects and be prepared to migrate away
      from it sooner rather than later.

Travel::Status::DE::IRIS 1.96 - Sun Feb 25 2024

    * Re-add Wipperliese stations (service resumes on March 29th, 2024)
    * IRIS->new / get_station: correctly handle non-EVA station identifiers
      in with_related mode. Previously, these caused (harmless, but annoying)
      "isn't numeric in numeric eq (==)" warnings.

Travel::Status::DE::IRIS 1.95 - Thu Feb 22 2024

    * Update qos/delay message texts

Travel::Status::DE::IRIS 1.94 - Mon Jan 29 2024

    * Update stations list
    * Do not use now-deprecated smartmatch features

Travel::Status::DE::IRIS 1.93 - Fri Dec 22 2023
